--- a/css/styles.css
+++ b/css/styles.css
@@ -202,6 +202,7 @@ p {
     padding: 16px 32px;
     border: 1px solid transparent;
     border-radius: 4px;
+   
 }
 
 
@@ -209,11 +210,26 @@ p {
 .button-hero:focus {
     background-color: var(--buton-color);
     color: var(--buttons-color-hover);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 .button-hero:active {
     background-color: #404BBF; 
     color: var(--buttons-color-hover);
 }
+.background-hero {
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-image: linear-gradient(to right,rgba(47,48,58,0.8),rgba(47, 48, 58, 0.8)), url("../images/people-office\ 1.jpg");
+    border: 1px solid #000000;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+
 
 /* section features */
 
@@ -228,8 +244,9 @@ p {
 }
 .features-item {
     margin-right: 24px;
-    
 }
+
+
 .features-item:last-child {
     margin-right: 0;
 }
@@ -252,6 +269,23 @@ p {
     line-height: 1.5;
     letter-spacing: 0.02em;
     font-family: var(--primary-font);
+}
+.features-icon-list {
+    margin-bottom: 8px;
+    width: 264px;
+    height: 112px;
+    justify-content: center;
+    display: flex;
+    border-radius: 4px;
+    margin-right: 24px;
+}
+.features-icon-list:last-child {
+    margin-right: 0px;
+}
+.features-icon {
+    width: 64px;
+    height: 64px;
+    
 }
 /* section What are we doing */
 
@@ -288,7 +322,7 @@ p {
 }
 .content-team {
     padding-top: 32px;
-    padding-bottom: 32px;
+    
 }
 .team-header {
     color: var(--primary-text-color);
@@ -315,9 +349,22 @@ p {
 }
 .team-item {
     margin-right: 24px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 .team-item:last-child {
     margin-right: 0;
+}
+.icon-team {
+    width: 40px;
+    height: 40px; 
+    cursor: pointer;
+}
+
+.team-icons {
+    display: flex;
+    justify-content: space-between;
+    padding: 12px 16px 36px 16px;
+    
 }
 
 /* footer-logo */
@@ -343,26 +390,117 @@ p {
     letter-spacing: 0.03em;
     font-family: var(--secondary-background);
     font-weight: 800;
-    
-    
 }
-/* footer */
-.footer-link {
-    padding-bottom: 16px;
-}
-.footer {
-    background-color: var(--primary-text-color);
-    
-}
-.footer-paragraph {
-    color: #E7E9FC;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
+/* -----CUSTOMERS------ */
+.customers-header {
     font-family: var(--primary-font);
-    width: 264px;
+    font-weight: 700;
+    font-size: 36px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+    margin-bottom: 72px; 
+}
+.customers-section {
+    background-color: var(--complementary-color);
+}
+.customers-icons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 120px;
+    
+    
+}
+.icon-customers {
+    width: 168px;
+    height: 88px;
+    border: 1px solid #8E8F99;
+    box-sizing: border-box;
+    border-radius: 4px;
+    fill: #8e8f99;
+    cursor: pointer;
+}
+.icon-customers:focus,
+.icon-customers:hover {
+    fill: var(--buton-color);
+    border: 1px solid var(--buton-color);
 }
 
+.icon-link {
+    margin-right: 24px;
+}
+.icon-link:last-child {
+    margin-right: 0;
+}
+/* footer */
+.footer{
+    padding: 100px 0px;
+    background-color: var(--primary-text-color);
+}
+
+.footer-container {
+    display: flex;
+}
+
+.footer-contant {
+    margin-right: 120px;
+}
+
+.footer-logo {
+    font-family: var(--secondary-background);
+    color: var(--buttons-color-hover);
+    font-size: 18px;
+    font-weight: 800;  
+}
+
+.footer-paragraph {
+    width: 284px;
+    margin-top: 16px;
+    color: var(--buttons-color-hover);
+    line-height: 1.5;
+    
+}
+
+.footer-header {
+    font-size: 16px;
+    margin-bottom: 16px;
+    color: var(--buttons-color-hover);
+    font-weight: 700;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    
+}
+
+.footer-container-icons {
+    display: flex;
+}
+
+
+
+.link-icons {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: rgba(255, 255, 255, 0.1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 16px;
+    cursor: pointer;
+}
+..link-icons:last-child {
+    margin-right: 0;
+}
+.link-icons:hover,
+.link-icons:focus {
+    background-color: #31D0AA;
+}
+
+.icon-svg-footer {
+    height: 24px;
+    width: 24px;
+}
 
 
 
@@ -384,6 +522,7 @@ p {
     background-color: var(--buttons-background-color-hover);
     cursor: pointer;
     border: none;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     
 }
 .button-all {
@@ -503,7 +642,14 @@ p {
     margin-bottom: 48px;
     margin-right: 24px;
     width: 360px;
+   
 }
+.portfolio-item-img:hover,
+.portfolio-item-img:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
+
+
 
 .portfolio-item-img:nth-last-child(-n+3) {
     margin-bottom: 0;
