--- a/css/styles.css
+++ b/css/styles.css
@@ -217,7 +217,7 @@ p {
     color: var(--buttons-color-hover);
 }
 .background-hero {
-    max-width: 1600px;
+    max-width: 1440px;
     margin-left: auto;
     margin-right: auto;
     background-size: cover;
@@ -278,6 +278,8 @@ p {
     display: flex;
     border-radius: 4px;
     margin-right: 24px;
+    align-items: center;
+    background-color: var(--complementary-color2);
 }
 .features-icon-list:last-child {
     margin-right: 0px;
@@ -319,6 +321,7 @@ p {
 .team {
     background-color: var(--complementary-color2);
     padding-bottom: 120px;
+    padding-top: 120px;
 }
 .content-team {
     padding-top: 32px;
@@ -346,10 +349,12 @@ p {
 }
 .team-list {
     display: flex;
+    
 }
 .team-item {
     margin-right: 24px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    background-color: var(--buttons-color-hover);
 }
 .team-item:last-child {
     margin-right: 0;
@@ -365,6 +370,11 @@ p {
     justify-content: space-between;
     padding: 12px 16px 36px 16px;
     
+}
+
+.team-icon-item {
+    width: 100%;
+    height: 100%;
 }
 
 /* footer-logo */
@@ -403,36 +413,46 @@ p {
 }
 .customers-section {
     background-color: var(--complementary-color);
+    padding: 120px 0;
 }
-.customers-icons {
+.customers-list {
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding-bottom: 120px;
-    
+}
+.customers-item {
+    margin-right: 24px;
     
 }
-.icon-customers {
+.customers-item:last-child {
+    margin-right: 0px;
+}
+.svg-customers {
+    width: 104px;
+    height: 56px;
+    fill: #AFB1B8;
+}
+.customers-link {
     width: 168px;
     height: 88px;
     border: 1px solid #8E8F99;
-    box-sizing: border-box;
+    justify-content: center;
+    align-items: center;
+    display: flex;
     border-radius: 4px;
-    fill: #8e8f99;
-    cursor: pointer;
-}
-.icon-customers:focus,
-.icon-customers:hover {
-    fill: var(--buton-color);
-    border: 1px solid var(--buton-color);
 }
 
-.icon-link {
-    margin-right: 24px;
+.svg-customers:focus {
+    fill: var(--buton-color);
+    
 }
-.icon-link:last-child {
-    margin-right: 0;
+.svg-customers:hover {
+    fill: var(--buton-color);
 }
+
+
+
+
+
 /* footer */
 .footer{
     padding: 100px 0px;
@@ -487,9 +507,14 @@ p {
     justify-content: center;
     align-items: center;
     margin-right: 16px;
-    cursor: pointer;
 }
-..link-icons:last-child {
+.social-item {
+    margin-right: 16px;
+}
+..social-item:last-child {
+    margin-right: 0;
+}
+.link-icons:last-child {
     margin-right: 0;
 }
 .link-icons:hover,
@@ -497,13 +522,14 @@ p {
     background-color: #31D0AA;
 }
 
+
 .icon-svg-footer {
     height: 24px;
     width: 24px;
 }
-
-
-
+.social-list {
+    display: flex;
+}
 
 /* buttons portfolio.html */
 
@@ -657,6 +683,12 @@ p {
 .portfolio-item-img:nth-child(3n) {
     margin-right: 0px;
 }
+
+
+
+
+
+
 
 
 
