--- a/css/styles.css
+++ b/css/styles.css
@@ -68,6 +68,9 @@ p {
 }
 
 /* header */
+.header {
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
+}
 
 .logo-header1 {
     color: var(--buton-color);
@@ -363,6 +366,9 @@ p {
     width: 40px;
     height: 40px; 
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .team-icons {
@@ -412,7 +418,7 @@ p {
     margin-bottom: 72px; 
 }
 .customers-section {
-    background-color: var(--complementary-color);
+    background-color: var(--buttons-color-hover);
     padding: 120px 0;
 }
 .customers-list {
@@ -421,6 +427,8 @@ p {
 }
 .customers-item {
     margin-right: 24px;
+    width: 168px;
+    height: 88px;
     
 }
 .customers-item:last-child {
@@ -429,11 +437,14 @@ p {
 .svg-customers {
     width: 104px;
     height: 56px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     
 }
 .customers-link {
-    width: 168px;
-    height: 88px;
+    width: 100%;
+    height: 100%;
     border: 1px solid #8E8F99;
     justify-content: center;
     align-items: center;
@@ -500,8 +511,8 @@ p {
 
 
 .link-icons {
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     background-color: rgba(255, 255, 255, 0.1);
     display: flex;
@@ -511,8 +522,10 @@ p {
 }
 .social-item {
     margin-right: 16px;
+    width: 40px;
+    height: 40px;
 }
-..social-item:last-child {
+.social-item:last-child {
     margin-right: 0;
 }
 .link-icons:last-child {
@@ -527,6 +540,9 @@ p {
 .icon-svg-footer {
     height: 24px;
     width: 24px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .social-list {
     display: flex;
@@ -671,9 +687,13 @@ p {
     width: 360px;
    
 }
-.portfolio-item-img:hover,
-.portfolio-item-img:focus {
+.portfolio-link {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08);
+    display: block;
+}
+.portfolio-link:hover,
+.portfolio-link:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 
